# RailgunSimulation

./: .dockerignore  Dockerfile  README.md  app.py  calcul.py  fire_railgun.py  pyproject.toml  skybox.7z
wwwroot/: index.html  style.css
wwwroot/js/: main.js  menu.js
