[tool.poetry]
name = "railgunsimulation"
version = "1.0.0"
description = "The most effective way to fire a metal monke through the use of a rail gun cannon for the sake of science"
authors = ["William Fecteau <william-fecteau@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.0.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
